--- a/main/carts/templates/product_count_number.html
+++ b/main/carts/templates/product_count_number.html
@@ -1,3 +1,9 @@
 {{quantity}}
+<script>
+// به‌روزرسانی تعداد کل سبد خرید در navbar
+if (typeof updateCartCount === 'function') {
+    updateCartCount();
+}
+</script>
 
 
