--- a/main/products/templates/product_count.html
+++ b/main/products/templates/product_count.html
@@ -80,4 +80,9 @@
     {% endif %}
 {% endif %}
 
-
+<script>
+// به‌روزرسانی تعداد کل سبد خرید در navbar
+if (typeof updateCartCount === 'function') {
+    updateCartCount();
+}
+</script>
