--- a/main/products/templates/product_count_mobile.html
+++ b/main/products/templates/product_count_mobile.html
@@ -397,3 +397,10 @@
     }
 }
 </style>
+
+<script>
+// به‌روزرسانی تعداد کل سبد خرید در navbar
+if (typeof updateCartCount === 'function') {
+    updateCartCount();
+}
+</script>
