--- a/main/users/templates/otp.html
+++ b/main/users/templates/otp.html
@@ -41,7 +41,7 @@
                         {% endif %}
 
                         <!-- فرم OTP -->
-                        <form method="post" id="otpForm" href="{% url 'users:verify' %}">
+                        <form method="post" id="otpForm" action="{% url 'users:verify' %}">
                             {% csrf_token %}
                             <input type="hidden" name="phone_number" value="{{ phone_number }}">
                             <input type="hidden" name="next" value="{{ next }}">
@@ -59,6 +59,10 @@
                                 <div class="text-center mt-2">
                                     <p class="text-muted small">زمان باقیمانده: <span id="countdown" class="timer">02:00</span></p>
                                 </div>
+                                <script>
+                                    // تنظیم زمان باقیمانده از سرور
+                                    window.initialRemainingTime = {{ remaining_time|default:120 }};
+                                </script>
                             </div>
 
                             <button type="submit" class="btn btn-primary w-100 mb-3">
